--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "submissionTransportSimple",
-  "displayName": "submissionTransportSimple"
+  "name": "TASKOO",
+  "displayName": "TASKOO"
 }
