--- a/ios/TASKOO.xcodeproj/xcshareddata/xcschemes/TASKOO.xcscheme
+++ b/ios/TASKOO.xcodeproj/xcshareddata/xcschemes/TASKOO.xcscheme
@@ -15,9 +15,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "submissionTransportSimple.app"
-               BlueprintName = "submissionTransportSimple"
-               ReferencedContainer = "container:submissionTransportSimple.xcodeproj">
+               BuildableName = "TASKOO.app"
+               BlueprintName = "TASKOO"
+               ReferencedContainer = "container:TASKOO.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -33,9 +33,9 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "00E356ED1AD99517003FC87E"
-               BuildableName = "submissionTransportSimpleTests.xctest"
-               BlueprintName = "submissionTransportSimpleTests"
-               ReferencedContainer = "container:submissionTransportSimple.xcodeproj">
+               BuildableName = "TASKOOTests.xctest"
+               BlueprintName = "TASKOOTests"
+               ReferencedContainer = "container:TASKOO.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -55,9 +55,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "submissionTransportSimple.app"
-            BlueprintName = "submissionTransportSimple"
-            ReferencedContainer = "container:submissionTransportSimple.xcodeproj">
+            BuildableName = "TASKOO.app"
+            BlueprintName = "TASKOO"
+            ReferencedContainer = "container:TASKOO.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -72,9 +72,9 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "submissionTransportSimple.app"
-            BlueprintName = "submissionTransportSimple"
-            ReferencedContainer = "container:submissionTransportSimple.xcodeproj">
+            BuildableName = "TASKOO.app"
+            BlueprintName = "TASKOO"
+            ReferencedContainer = "container:TASKOO.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
