--- a/package.json
+++ b/package.json
@@ -15,11 +15,17 @@
     "@react-navigation/native-stack": "^6.9.13",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-config": "^1.5.1",
+    "react-native-drop-shadow": "^0.0.7",
+    "react-native-fast-image": "^8.6.3",
     "react-native-linear-gradient": "^2.8.1",
+    "react-native-pell-rich-editor": "^1.9.0",
+    "react-native-reanimated": "^3.4.2",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.24.0",
-    "react-native-svg": "^13.10.0"
+    "react-native-svg": "^13.10.0",
+    "react-native-webview": "^13.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
